<resources>
    <string name="app_name">FodBath</string>
    <string name="main_language">繁中</string>
    <string name="main_home">Home</string>
    <string name="main_preview_goods_list">Submitted And Pending List</string>
    <string name="main_stock_query_and_goods_request1">Stock Enquiry And</string>
    <string name="main_stock_query_and_goods_request2">Reservation Request</string>
    <string name="change_password">Change Password</string>
    <string name="sign_out">Logout</string>
    <string name="already_commit_to_goods_list">Submitted And Pending List</string>
    <string name="product_search">SKU Search</string>
    <string name="keyword">Keyword</string>
    <string name="button_search">Search</string>
    <string name="product_search_result">SKU Search Result</string>
    <string name="view_preview_list">View</string>
    <string name="preview_goods_list">Reservation Request List</string>
    <string name="product">SKU</string>
    <string name="commit">Commit</string>
    <string name="specification">Spec</string>
    <string name="add">Add</string>
    <string name="current_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="confirm">OK</string>
    <string name="confirm_sign_out">Are you sure to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="please_choose_request_qty">Please choose request qty</string>
    <string name="success_add_to_goods_list">Successfully added to current request list</string>
    <string name="view_list">View</string>
    <string name="keep_on">Continue</string>
    <string name="exit_the_request_list">Exit the request list?</string>
    <string name="confirm_delete">Confirm Delete?</string>
    <string name="successfully_deleted">successfully deleted</string>
    <string name="product_number">SKU No:</string>
    <string name="product_content">SKU Desc:</string>
    <string name="suggested_retail_price">Suggested Retail Price $</string>
    <string name="stock_number">Stock Qty  </string>
    <string name="request_number">Request Qty  </string>
    <string name="detail_stock_number">Stock available Qty</string>
    <string name="next_shipment_Estimated_arrival_date">Next Shipment Estimated Arrival date</string>
    <string name="next_shipment_quantity">Next Shipment Quantity</string>
    <string name="request_quantity">Request Quantity(Only for Stock available Qty)</string>
    <string name="data_is_empty">Data is empty, please add data</string>
    <string name="ask_number">Request list No:</string>
    <string name="already_commit_request_quantity">Quantity Requested</string>
    <string name="expire_date">Expiry Date:</string>
    <string name="cannot_find_the_relevant_information">Can not find the relevant information</string>
    <string name="save_successfully">Save successfully</string>
    <string name="your_reservation_list_has_been_successfully_submitted">Your reservation list has been successfully submitted</string>
    <string name="serial_number">serial number</string>
    <string name="your_product_will_be_due_in_May">Your product will be due in</string>
    <string name="has_been_added_to_reservation_request_list">Has been added to reservation request list,do not repeat</string>

</resources>
