<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_gravity="center_horizontal"
        android:background="#33ff0000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:layout_marginLeft="5dp"
        android:textColor="#C7B467"
        android:id="@+id/textView3" />

    <EditText
        android:id="@+id/et_current_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/login_shape"
        android:hint="@string/current_password"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/et_new_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/login_shape"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/et_confirm_new_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/login_shape"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:singleLine="true" />

    <Button
        android:id="@+id/btn_confirm_password"
        android:layout_marginTop="5dp"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:background="@drawable/login_button"
        android:layout_gravity="center_horizontal"
        android:text="@string/confirm"
        android:textColor="#ffffff" />

</LinearLayout>