<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_top_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_detail_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gessi"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_detail_product_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3GI-20061299----BK--"
            android:textStyle="bold" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E6E6E6"
        android:layout_alignParentBottom="true"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_preview_detail_format"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:paddingLeft="20dp"
                android:background="@drawable/detail_format_shape"
                android:drawableLeft="@mipmap/question"
                android:text="@string/specification"
                android:layout_centerInParent="true"
                android:textColor="#ffffff" />

        </RelativeLayout>

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/rl_middle_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CBCBCB"
        android:layout_below="@id/ll_top_content"
        android:layout_above="@id/fl_view">

        <TextView
            android:id="@+id/tv_detail_product_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rettangolo 20061.299 external parts for 20049 in black"
            android:textSize="10sp" />

        <LinearLayout
            android:id="@+id/ll_reserved_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="170dp"
                    android:textSize="10sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/suggested_retail_price" />

                <TextView
                    android:id="@+id/tv_detail_suggest_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="1dp"
                    android:background="#ffffff"
                    android:text="3800" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="170dp"
                    android:textSize="10sp"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_stock_number" />

                <TextView
                    android:id="@+id/tv_detail_stock_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="1dp"
                    android:text="0" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="170dp"
                    android:textSize="10sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/next_shipment_Estimated_arrival_date"
                    android:id="@+id/textView4" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="1dp"
                    android:background="#ffffff"
                    android:text="N/A" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="170dp"
                    android:textSize="10sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/next_shipment_quantity" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="1dp"
                    android:background="#ffffff"
                    android:text="0"
                    android:id="@+id/textView2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:textSize="10sp"
                    android:layout_height="wrap_content"
                    android:text="@string/request_quantity" />

                <TextView
                    android:id="@+id/tv_preview_detail_reserved_number"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:background="#ffffff"
                    android:drawableRight="@mipmap/down_arrow"
                    android:text="0" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>